--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">fleky</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name" translatable="false">fleky</string>
+    <string name="memories_empty">You don\'t have any memories\nStart by adding some!</string>
 </resources>
