--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name" translatable="false">fleky</string>
     <string name="memories_empty">You don\'t have any memories\nStart by adding some!</string>
+
+    <string name="hint_title">Title</string>
+    <string name="hint_comment">Comment</string>
+
 </resources>
