--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hint_title">Title</string>
     <string name="hint_comment">Comment</string>
 
+    <string name="share_dialog_title">Share your memory</string>
 </resources>
